--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@heroicons/react": "^1.0.6",
     "@progress/kendo-react-pdf": "^5.13.0",
     "@react-pdf/renderer": "^3.1.9",
+    "axios": "^1.3.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
