--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "mongoose": "^7.0.5",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22"
   }
 }
